--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "da3cbbc5-890b-4dc5-8ebc-05b162170886"
 authors = ["Sebastian Pech <sebastian.pech@me.com>"]
 version = "0.1.0"
 
+[deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+NamedDims = "356022a1-0364-5f58-8944-0da4b18d706f"
+Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
+
 [compat]
 julia = "1"
 
